--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "type": "module",
   "dependencies": {
     "@google-cloud/storage": "^6.0.0",
+    "@iconify/json": "^2.1.53",
     "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
     "config": "^3.3.7",
@@ -28,9 +29,12 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.4",
     "multer": "^1.4.4",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "react-fa-icon-picker": "^1.0.3",
+    "react-toggle": "^4.1.2"
   },
   "devDependencies": {
+    "@iconify/react": "^3.2.2",
     "concurrently": "^7.2.1",
     "nodemon": "^2.0.16"
   }
