--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 PORT = 5000
 JWT_SECRET = "One Piece"
 MONGODB_URI = "mongodb+srv://hype:beast@hype.cggyezq.mongodb.net/?retryWrites=true&w=majority"
+BACKEND_DEV_PORT = http://127.0.0.1:5000/api
