--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,6 +44,7 @@
     "react-dev-utils": "^12.0.1",
     "react-dom": "^18.1.0",
     "react-dotenv": "^0.1.3",
+    "react-ellipsis-text": "^1.2.1",
     "react-hot-loader": "^4.13.0",
     "react-loader-spinner": "^6.0.0-0",
     "react-modal": "^3.15.1",
