ready for deployment

--- a/.env
+++ b/.env
@@ -2,5 +2,4 @@ PORT = 5000
 JWT_SECRET = "One Piece"
 MONGODB_URI = "mongodb+srv://hype:beast@hype.cggyezq.mongodb.net/?retryWrites=true&w=majority"
 BACKEND_DEV_PORT = http://127.0.0.1:5000/api
-USER_PROFILE = "https://firebasestorage.googleapis.com/v0/b/user-uploads-v1.appspot.com/o/hype%2Fassets%2Fdefault.png?alt=media&token=fe934a8c-39a8-42da-9871-9c9ccc3d3a9e"
-DEFAULT_THEME = "https://firebasestorage.googleapis.com/v0/b/user-uploads-v1.appspot.com/o/hype%2Fthemes%2Ft3.png?alt=media&token=2921c754-9e01-47bb-bfa3-5da0f652b8ef"
+NODE_ENV = development
