--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "start": "node backend/server",
     "server": "nodemon backend/server",
     "client": "npm start --prefix frontend",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "install-client": "cd frontend && npm install",
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix frontend && npm run build --prefix frontend"
+
   },
   "keywords": [],
   "author": "",
@@ -28,6 +31,7 @@
     "express-validator": "^6.14.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.4",
+    "morgan": "^1.10.0",
     "multer": "^1.4.4",
     "path": "^0.12.7",
     "react-toggle": "^4.1.2"
