--- a/frontend/package.json
+++ b/frontend/package.json
@@ -52,6 +52,7 @@
     "react-refresh": "^0.11.0",
     "react-router-dom": "^6.3.0",
     "react-toastify": "^9.0.1",
+    "react-toggle": "^4.1.2",
     "react-use-clipboard": "^1.0.8",
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
