--- a/package.json
+++ b/package.json
@@ -9,9 +9,7 @@
     "server": "nodemon backend/server",
     "client": "npm start --prefix frontend",
     "install-client": "cd frontend && npm install",
-    "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix frontend && npm run build --prefix frontend"
-
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "keywords": [],
   "author": "",
@@ -33,8 +31,7 @@
     "mongoose": "^6.3.4",
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
-    "path": "^0.12.7",
-    "react-toggle": "^4.1.2"
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "@iconify/react": "^3.2.2",
