--- a/package.json
+++ b/package.json
@@ -2,13 +2,15 @@
   "name": "hype",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node backend/server",
-    "server": "nodemon backend/server",
+
+    "build":"cd frontend && npm run build",
     "client": "npm start --prefix frontend",
     "install-client": "cd frontend && npm install",
+    "heroku-postbuild": "cd frontend && npm install --only=dev && npm install && npm run build",
+    "start": "node backend/server",
+    "server": "nodemon backend/server",
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "keywords": [],
