--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "server": "nodemon backend/server",
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
+  "engines": {
+    "node": "16.13.1",
+    "npm": "6.14.7"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
