--- a/frontend/package.json
+++ b/frontend/package.json
@@ -46,6 +46,7 @@
     "react-dom": "^18.1.0",
     "react-dotenv": "^0.1.3",
     "react-ellipsis-text": "^1.2.1",
+    "react-helmet": "^6.1.0",
     "react-loader-spinner": "^6.0.0-0",
     "react-modal": "^3.15.1",
     "react-redux": "^8.0.2",
