--- a/frontend/package.json
+++ b/frontend/package.json
@@ -51,6 +51,7 @@
     "react-modal": "^3.15.1",
     "react-redux": "^8.0.2",
     "react-refresh": "^0.11.0",
+    "react-responsive": "^9.0.0-beta.10",
     "react-router-dom": "^6.3.0",
     "react-toastify": "^9.0.1",
     "react-toggle": "^4.1.2",
