--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "mongoose": "^6.3.4",
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "react-favicon": "^1.0.1"
   },
   "devDependencies": {
     "@iconify/react": "^3.2.2",
